Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-17764

[CI][C++] "#include <optional>" is missing

    XMLWordPrintableJSON

Details

    Description

      https://github.com/ursacomputing/crossbow/actions/runs/3073442125/jobs/4965573117#step:5:8420

      FAILED: src/arrow/flight/sql/CMakeFiles/arrow_flight_sql_objlib.dir/sql_info_internal.cc.o 
      /usr/bin/c++ -DARROW_FLIGHT_SQL_EXPORTING -DARROW_HAVE_RUNTIME_AVX2 -DARROW_HAVE_RUNTIME_AVX512 -DARROW_HAVE_RUNTIME_BMI2 -DARROW_HAVE_RUNTIME_SSE4_2 -DARROW_HAVE_SSE4_2 -DARROW_HDFS -DARROW_WITH_BROTLI -DARROW_WITH_BZ2 -DARROW_WITH_LZ4 -DARROW_WITH_RE2 -DARROW_WITH_SNAPPY -DARROW_WITH_TIMING_TESTS -DARROW_WITH_UTF8PROC -DARROW_WITH_ZLIB -DARROW_WITH_ZSTD -DGRPC_NAMESPACE_FOR_TLS_CREDENTIALS_OPTIONS=grpc::experimental -DGRPC_USE_CERTIFICATE_VERIFIER -DGRPC_USE_TLS_CHANNEL_CREDENTIALS_OPTIONS -DURI_STATIC_BUILD -DUTF8PROC_STATIC -I/tmp/arrow-HEAD.YQq4y/cpp-build/src -I/arrow/cpp/src -I/arrow/cpp/src/generated -isystem /tmp/arrow-HEAD.YQq4y/cpp-build/protobuf_ep-install/include -isystem /arrow/cpp/thirdparty/flatbuffers/include -isystem /arrow/cpp/thirdparty/hadoop/include -isystem /tmp/arrow-HEAD.YQq4y/cpp-build/boost_ep-prefix/src/boost_ep -isystem /tmp/arrow-HEAD.YQq4y/cpp-build/brotli_ep/src/brotli_ep-install/include -isystem /tmp/arrow-HEAD.YQq4y/cpp-build/orc_ep-install/include -isystem /tmp/arrow-HEAD.YQq4y/cpp-build/utf8proc_ep-install/include -isystem /tmp/arrow-HEAD.YQq4y/cpp-build/re2_ep-install/include -isystem /tmp/arrow-HEAD.YQq4y/cpp-build/rapidjson_ep/src/rapidjson_ep-install/include -isystem /tmp/arrow-HEAD.YQq4y/cpp-build/xsimd_ep/src/xsimd_ep-install/include -isystem /tmp/arrow-HEAD.YQq4y/cpp-build/jemalloc_ep-prefix/src -isystem /tmp/arrow-HEAD.YQq4y/cpp-build/grpc_ep-install/include -isystem /tmp/arrow-HEAD.YQq4y/cpp-build/absl_ep-install/include -isystem /tmp/arrow-HEAD.YQq4y/cpp-build/cares_ep-install/include -isystem /tmp/arrow-HEAD.YQq4y/cpp-build/bzip2_ep-install/include -isystem /tmp/arrow-HEAD.YQq4y/cpp-build/lz4_ep-install/include -isystem /tmp/arrow-HEAD.YQq4y/cpp-build/snappy_ep/src/snappy_ep-install/include -isystem /tmp/arrow-HEAD.YQq4y/cpp-build/zstd_ep-install/include -Wno-noexcept-type  -fdiagnostics-color=always -O2 -DNDEBUG -ftree-vectorize  -Wall -fno-semantic-interposition -msse4.2   -DNDEBUG -fPIC -std=c++17 -MD -MT src/arrow/flight/sql/CMakeFiles/arrow_flight_sql_objlib.dir/sql_info_internal.cc.o -MF src/arrow/flight/sql/CMakeFiles/arrow_flight_sql_objlib.dir/sql_info_internal.cc.o.d -o src/arrow/flight/sql/CMakeFiles/arrow_flight_sql_objlib.dir/sql_info_internal.cc.o -c /arrow/cpp/src/arrow/flight/sql/sql_info_internal.cc
      In file included from /arrow/cpp/src/arrow/flight/sql/sql_info_internal.h:20,
                       from /arrow/cpp/src/arrow/flight/sql/sql_info_internal.cc:18:
      /arrow/cpp/src/arrow/flight/sql/types.h:899:8: error: 'optional' in namespace 'std' does not name a template type
        899 |   std::optional<std::string> catalog;
            |        ^~~~~~~~
      /arrow/cpp/src/arrow/flight/sql/types.h:29:1: note: 'std::optional' is defined in header '<optional>'; did you forget to '#include <optional>'?
         28 | #include "arrow/type_fwd.h"
        +++ |+#include <optional>
         29 | 
      /arrow/cpp/src/arrow/flight/sql/types.h:901:8: error: 'optional' in namespace 'std' does not name a template type
        901 |   std::optional<std::string> db_schema;
            |        ^~~~~~~~
      /arrow/cpp/src/arrow/flight/sql/types.h:901:3: note: 'std::optional' is defined in header '<optional>'; did you forget to '#include <optional>'?
        901 |   std::optional<std::string> db_schema;
            |   ^~~
      

      Attachments

        Issue Links

          Activity

            People

              kou Kouhei Sutou
              kou Kouhei Sutou
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 20m
                  1h 20m